tools/tests/errors/surf_type_02.experr
type 'None' does not support this binary operator
